kustomize-units/firewall/management-cluster/components/metal3/ironic-to-vip.yaml
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: ironic-to-vip
spec:
  order: 40
  preDNAT: true
  applyOnForward: true
  ingress:
  - action: Allow
    protocol: TCP
    source:
      selector: app.kubernetes.io/name == 'metal3-ironic'
    destination:
      nets:
      - ${CLUSTER_VIRTUAL_IP}
      ports:
      - 80
      - 443
